# cpp-solver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindCPLEX.cmake  FindGUROBI.cmake  FindRapidJSON.cmake  PatchOpenMPApple.cmake  TBBBuild.cmake  TBBGet.cmake  TBBMakeConfig.cmake  tbb_config_generator.cmake
cmake/templates/: TBBConfigForSource.cmake.in  TBBConfigVersion.cmake.in
src/: CMakeLists.txt  simplex.cpp  simplex.hpp
test/: CMakeLists.txt  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake
test/src/: CMakeLists.txt  simplextest.cpp
